# generate-fastapi-typed-routes

./: .copier-answers.yml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build_and_publish.yml  repo-sync.yml
generate_fastapi_typed_routes/: __init__.py
tests/: sample_app.py  test_cli.py  test_import.py
