[project]
name = "generate-fastapi-typed-routes"
version = "0.3.0"
description = "Generate typed url_path_for functions for FastAPI applications."
keywords = ["fastapi", "typing", "routes", "codegen"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "fastapi>=0.128.0",
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "structlog-config>=0.6.0",
]
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/generate-fastapi-typed-routes" }

# additional packaging information: https://packaging.python.org/en/latest/specifications/core-metadata/#license
[project.scripts]
generate-fastapi-typed-routes = "generate_fastapi_typed_routes:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
# avoids the src/ directory structure
module-root = ""

[dependency-groups]
dev = ["pytest>=8.3.3", "pyright[nodejs]>=1.1.380", "ruff>=0.8.0"]

[tool.pyright]
exclude = ["examples/", "playground/", "tmp/", ".venv/", "tests/"]

[tool.ruff]
extend-exclude = ["playground.py", "playground/"]
